feat: Products controller

--- a/WebProductsControl/appsettings.json
+++ b/WebProductsControl/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-J6LT7AS;Initial Catalog=WebProducts;Integrated Security=SSPI"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
